--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,12 @@
       rel="stylesheet"
     />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-    <title>codesandbox</title>
+    <title>PixelDrawer</title>
   </head>
   <body>
     <noscript>
       <strong
-        >We're sorry but codesandbox doesn't work properly without JavaScript
+        >We're sorry but PixelDrawer doesn't work properly without JavaScript
         enabled. Please enable it to continue.</strong
       >
     </noscript>
